# Clasificacion-de-textos-medicos

./: .gitignore  Dockerfile  EDA_Microproyecto.ipynb  README.md  makefile  replacements.txt  requirements.txt
.dvc/: config
.venv_clasificador/: pyvenv.cfg
.venv_clasificador/Scripts/: activate  activate.bat
EXPLORACION/: BGE_LogReg.ipynb  BGE_NaiveBayes.ipynb  BGE_SVM.ipynb  BGE_XGBOOST.ipynb  Coachrane_Dataset.ipynb  Coachrane_Dataset_contextuales.ipynb  Combined_Datasets.ipynb  Combined_Datasets_contextuales.ipynb  Gemma3_270M_PlainTechnical_FT_20250908_015411.ipynb  PubMedBert_LogReg.ipynb  PubMedBert_NaiveBayes.ipynb  PubMedBert_SVM.ipynb  PubMedBert_XGBOOST.ipynb  Testing_wheel_pkg.ipynb  tf_idf_LogReg.ipynb  tf_idf_NaiveBayes.ipynb  tf_idf_SVM.ipynb  tf_idf_XGBOOST.ipynb  tfidf_vocabulary.json
EXPLORACION/.ipynb_checkpoints/: Coachrane_Dataset-checkpoint.ipynb  Combined_Datasets-checkpoint.ipynb  Testing_wheel_pkg-checkpoint.ipynb  tf_idf_NaiveBayes-checkpoint.ipynb  tf_idf_SVM-checkpoint.ipynb
EXPLORACION/wheel_logreg/: MANIFEST.in  setup.cfg
EXPLORACION/wheel_logreg/textclf_logreg/: tfidf.joblib
EXPLORACION/wheel_logreg/textclf_logreg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
EXPLORACION/wheel_svm/: MANIFEST.in  setup.cfg
EXPLORACION/wheel_svm/textclf_svm/: __init__.py  metrics.json  model.joblib  tfidf.joblib
app/: CTM.postman_collection.json  Dockerfile  api.py  config.py
app/helpers/: external_model_source.py
app/schemas/: __init__.py  predict.py
mlruns/0/: meta.yaml
web/: Caddyfile  Dockerfile  package.json
(+31 files in other folders)
