[metadata]
name = textclf_logreg
version = 0.1.0
description = Minimal wheel with TF-IDF + logreg model

[options]
packages = find:
include_package_data = True
install_requires =
    scikit-learn
    joblib
    numpy
    scipy
python_requires = >=3.9

[options.package_data]
textclf_logreg = *.joblib